# credit-risk-modelling

./: Makefile  README.md  pyproject.toml
src/credit_risk_modelling/: app.py  main.py
src/credit_risk_modelling/charts/: draw.py
src/credit_risk_modelling/distributions/: binomial.py
src/credit_risk_modelling/front_end/: cmd.py  utils.py
src/credit_risk_modelling/lang/: language.py
src/credit_risk_modelling/metrics/: risk_measures.py
src/credit_risk_modelling/pages/: 1_home_page.py  2_getting_started.py
